fixed alignment issues

--- a/roll-that-status/src/Status.css
+++ b/roll-that-status/src/Status.css
@@ -13,7 +13,7 @@
   font-size: 3.5vh;
 
   width: 55vh;
-  top: 66.5vh;
+  top: 70vh;
   left: 71.5vh;
   position: relative;
   text-align: center;
